--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
             <div class="row">
                 <div class="history">
+                    <h4>About</h4>
                     <p><strong>Mrs.Lee Ji Eun</strong> is opened <strong>Autumn 165 Cafe</strong> since 2016. She opened in Grindelwald Switzerland. The purpose of cafe is to make people feel relax, peaceful, happy and to know them how good coffee can make them good emotions.</p>
                 </div>
             </div>
