--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
     <title>Autumn 165 Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./assets/img/autumn.jpg" rel="icon" type="image/jpg" sizes="16x16" />
@@ -143,6 +144,7 @@
             <div class="row">
                 <div class="col-md-6 align-self-center booking">
                     <h4>Booking</h4>
+                    <span><i class="fas fa-clock"></i> Hours - Daily 7am-9pm</span>
                     <p>Reserve a table</p>
                     <a href="#" class="btn btn-lg btn-primary bookingbtn">Make Booking</a>
                 </div>
